# python-patch

./: .editorconfig  .gitignore  .travis.yml  APIUseCases.md  Adoptions.md  DESIGN.md  FrontPage.md  MANIFEST.in  ProjectHome.md  README.md  README.rst  Source.md  __main__.py  patch.py  setup.cfg  setup.py
branches/perf-line-getter-probing/: patch.py
branches/perf-line-getter-probing/doc/: example.diff.diff
doc/: ADOPTIONS.md  CHANGES.md  CREDITS  HISTORY  LICENSE  RELEASING  evolution-notes.txt
example/: example.py
other/: README.md  pack.py  pack.setuppy.tpl
tags/1.12.11/: patch.py
tags/1.12.11/tests/: 03trail_fname.to  04can_patch.patch  recoverage.bat
tags/11.01/: patch.py
tags/9.08-2/: patch.py
tests/: 05hg_change.to  07google_code_wiki.to  recoverage.bat  run_tests.py
tests/01uni_multi.from/: manifest.xml
tests/08create/: 08create.patch
tests/09delete/: 09delete.patch  deleted
tests/coverage/: index.html  patch_py.html  run_tests.html  status.json  tests_run_tests_py.html
tests/data/: git-dash-in-filename.diff  hg-changed-2-files.diff  svn-added-new-file-withcontent.diff  svn-changed-2-files.diff  svn-modified-empty-file.diff
trunk/: fix_devpak_install.patch  patch.py  updatedlg.cpp
trunk/doc/: CREDITS  LICENSE  evolution-notes.txt
trunk/other/: pack.mainpy.tpl  pack.py
trunk/tests/: 02uni_newline.patch  04can_patch.from  05hg_change.patch  06nested.patch  07google_code_wiki.from  07google_code_wiki.patch  Descript.ion  run_tests.py
wiki/: APIUseCases.wiki  Adoptions.wiki  DESIGN.wiki  FrontPage.wiki  README.wiki  Source.wiki
(+48 files in other folders)
