[metadata]
name = patch
version = 1.16
author = anatoly techtonik <techtonik@gmail.com>
license = MIT
description = Patch utility to apply unified diffs
url = https://github.com/techtonik/python-patch/
classifiers =
    Classifier: Programming Language :: Python :: 2
    Classifier: Programming Language :: Python :: 3

[options]
py_modules = patch
setup_requires = setuptools; setuptools_scm
